Merge beetwen HEAD and  B2006_01_21_PATCHES